--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a href="Parmpara Cold Pressed Oil.vcf" download="w3logo"><img src="add-user.png" alt=""></a>
                 <a href="https://wa.me/919979621231"><img src="whatsapp.png" alt=""></a>
                 <a href="https://www.instagram.com/parmpara.in/"><img src="instagram.png" alt=""></a>
-                <a href=""><img src="facebook.png" alt=""></a>
+                <a href="https://www.facebook.com/parmparaoil"><img src="facebook.png" alt=""></a>
             </div>
             <div class="social-icons">
                 <a href="https://g.page/r/CS3zUAoPJtnqEBI/review"><img src="review.png" alt=""></a>
@@ -35,3 +35,4 @@
     </div>
 </body>
 </html>
+
