Fix HTML encoding issues in index.html
Rename contact

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p>100% Pure & Ayurvedic</p>
             <div class="social-icons">
                 <!-- Your social links here -->
-                <a href="Parmpara Cold Pressed Oil.vcf" download="w3logo"><img src="add-user.png" alt=""></a>
+                <a href="Parmpara Cold Pressed Oil.vcf" download="Parmpara - Cold Pressed Oil"><img src="add-user.png" alt=""></a>
                 <a href="https://wa.me/919979621231"><img src="whatsapp.png" alt=""></a>
                 <a href="https://www.instagram.com/parmpara.in/"><img src="instagram.png" alt=""></a>
                 <a href="https://www.facebook.com/parmparaoil"><img src="facebook.png" alt=""></a>
@@ -35,4 +35,5 @@
     </div>
 </body>
 </html>
+
 
